# telephone-routing

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
data/: operator_a.csv  operator_b.csv  operator_c.csv
src/telephone_routing/: main.py  module.py
src/telephone_routing/model/: operator.py  response.py  trie.py
src/telephone_routing/repository/: operator_repo.py
src/telephone_routing/repository/impl/: operator_repo_file.py
src/telephone_routing/service/: telephone_routing.py
tests/: test_operator.py  test_telephone_routing.py  test_trie.py
