[project]
name = "telephone-routing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Le Xuan Vinh", email = "vinh.lx@outlook.com.vn"},
]
dependencies = [
    "pytest>=8.3.3",
    "coverage>=7.6.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
